blocked a page with robots.txt and added urls with queries

--- a/test-site/firstpage.html
+++ b/test-site/firstpage.html
@@ -5,8 +5,12 @@
   <body>
     <h1> Hello, First Page</h1>
     <img src="images/first-page.jpg">
+    <img src="images/first-page.jpg?a=1">
     <div>
-      <a href="secondpage.html">Second Page </a>
+      <a href="secondpage.html?a=1">Second Page a=1 </a> <br/>
+      <a href="secondpage.html?a=2">Second Page a=2 </a>  <br/>
+      <a href="secondpage.html?a=1&b=2">Second Page a=1&b=2 </a>  <br/>
+      <a href="secondpage.html">Second Page </a>  <br/>
     </div>
   </body>
 </html>
